--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,4 +8,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: prefix-dev/setup-pixi@v0.5.1
+        with:
+          cache: true
       - run: pixi run test
