--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,16 @@ name: "Run CI"
 on: pull_request
 
 jobs:
+  pre-commit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: prefix-dev/setup-pixi@v0.5.1
+        with:
+          cache: true
+      - run: pixi run pre-commit
   tests:
+    needs: pre-commit
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
