--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,6 +11,19 @@ jobs:
         with:
           cache: true
       - run: pixi run pre-commit
+  cppcheck:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: prefix-dev/setup-pixi@v0.5.1
+        with:
+          cache: true
+      - name: cppcheck
+        uses: deep5050/cppcheck-action@main
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN}}
+          enable: all
+          other_options: --disable=information --suppressions-list=.cppcheck
   tests:
     needs: pre-commit
     runs-on: ${{ matrix.os }}
