--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,29 @@ name: "Run CI"
 on: pull_request
 
 jobs:
+  pre-commit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: prefix-dev/setup-pixi@v0.5.1
+        with:
+          cache: true
+      - run: pixi run pre-commit
+  cppcheck:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: prefix-dev/setup-pixi@v0.5.1
+        with:
+          cache: true
+      - run: |
+          cmake -S . -B .build -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=Debug -DBUILD_EXAMPLES=ON
+          cppcheck --enable=all -q --project=.build/compile_commands.json --disable=information --suppress=missingIncludeSystem --error-exitcode=1
+        shell: pixi run bash -e {0}
   tests:
+    needs:
+      - pre-commit
+      - cppcheck
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
